assets/css/myStyle.css
.user:hover {
  cursor: pointer;
  box-shadow: "";
}

/* .searchItem:hover, */
form-control:hover,
.searchItemBox:hover {
  background: #f8f9fa;
  border: none !important;
}

.categorySliderBtn {
  cursor: pointer;
}

.stackTop {
  transition: 0.2s ease-in;
  position: fixed;
  z-index: 2;
  top: 30px;
  background: #fff !important;
  box-shadow: 0 0.5rem 1rem rgba(210, 91, 57, 0.2) !important;
}

.categoryIcon:hover {
  /* background-color: rgb(201, 239, 227); */
  color: royalblue;
  border-bottom: 2px solid royalblue;
  transition: transform 0.3s ease-out;
}
.categoryActive {
  color: royalblue;
  border-bottom: 2px solid royalblue;
}

@media (max-width: 767.98px) {
  .searchItem > .searchItemBox {
    border-right: none !important;
    /* border-bottom: 2px solid #f8f9fa; */
  }
  .form-control-sm {
    background-color: #f8f9fa !important;
  }
  .grid-search-result {
    min-width: 100%;
    margin: auto !important;
  }
  /* .searchItem:hover, */
  form-control:hover,
  .searchItemBox:hover {
    background: transparent;
    border-right: none !important;
  }
}

